# server/app/utils/swagger.ts
@@ -24,7 +24,9 @@ const doc = {
 };
 
 const outputFile = `${__dirname}/../../../data/swagger.json`;
-const endpointsFiles = [`${__dirname}/../routes/api/auth.js`, `${__dirname}/../routes/api/user.js`, `${__dirname}/../routes/api.js`];
+const endpointsFiles = [
+  // `${__dirname}/../routes/api/auth.js`, `${__dirname}/../routes/api/user.js`, `${__dirname}/../routes/api.js`,
+  `${__dirname}/../routes/api/disease.js`, `${__dirname}/../routes/api/night.js`];
 
 
 /* NOTE: if you use the express Router, you must pass in the 
